--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "start": "node serv.js",
+    "dev": "nodemon serv.js"
+  },
   "dependencies": {
     "axios": "^1.5.0",
     "cors": "^2.8.5",
